# egui_svgicon

./: Cargo.toml  LICENSE  README.md
examples/: main.rs
src/: gradient.rs  lib.rs  tessellation.rs  utils.rs
