[package]
name = "egui_svgicon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "0.20" }
usvg = { version = "0.28" }
lyon = { version = "1.0" }
puffin = { version = "0.14", optional = true }

[dev-dependencies]
eframe = { version = "0.20", features = ["wgpu"] }
# puffin_egui = { version = "0.19" }

[features]
cached = []
static_cached = ["cached"]

puffin = ["dep:puffin"]

[patch.crates-io]
eframe = { git = "https://github.com/emilk/egui", rev = "d15ce22e2edeabf9813ba2965ec64f9c9d62a679" }
egui = { git = "https://github.com/emilk/egui", rev = "d15ce22e2edeabf9813ba2965ec64f9c9d62a679" }
