[package]
name = "egui_svgicon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "0.21" }
usvg = { version = "0.29" }
lyon = { version = "1.0" }
puffin = { version = "0.14", optional = true }

[dev-dependencies]
eframe = { version = "0.21", features = ["wgpu"] }
egui_extras = { version = "0.21", features = ["image"] }
image = { version = "0.24", features = ["png"] }
puffin_egui = { version = "0.20" }

[features]
cached = []                # cache svg trees and meshes
static_cached = ["cached"] # use static ptr as svg trees' cache key
culled = []                # skip rendering offscreen shapes
gradient = []              # vertex color based simple gradient

puffin = ["dep:puffin"]
